# enterprise-ai-powered-sys

./: .env.example  .env_example.txt  .gitignore  AI_CONSULTANT_SETUP.md  QUICKSTART.md  README.md  README_Template.md  _secret_auth_.json  main.py  pyproject.toml  requirements.txt  requirements2.txt
.streamlit/: config.toml  secrets.toml.example
assets/enterprise_documents/: 02_active_personnel.md  05_vinyl_grading_guide.md  10_inventory_sourcing_guide.md  15_team_profiles.md  (+2 more)
auth/: _secret_auth_.json  auth_service.py
data-gen/: README.md  config.py  db_connector.py  gemini_generator.py  gemini_generator.py.backup  generate_data.py  generate_data.py.backup  main.ipynb  main.py  pyproject.toml  templates.py
docs/: ARCHITECTURE.md  TOOLS.md  agent_architecture.md  agent_issues_architecture.md  database_schema.md
documents/: 01_company_manifesto.md  06_shipping_packaging_policy.md  07_trade_in_consignment_policy.md  08_customer_privacy_policy.md  09_store_events_programs.md  11_customer_service_standards.md
enterprise-ai-powered-sys/: main.py  pyproject.toml
frontend/: styles.py
scripts/: index_documents.py  migrate_users_to_supabase.py
services/: activity_log_service.py  ai_business_consultant.py  ai_business_consultant_agent.py  ai_conversational_issues_agent.py  ai_health_agent.py  ai_issues_agent.py  ai_review_response_agent.py  association_rules.py  auth_email_service.py  business_agent_tools.py  config.py  email_service.py  jazz_research_service.py  marketing_service.py  rag_service.py
utils/: clients.py  database_schema.py  db_analytics.py
(+105 files in other folders)
